@@ -1,3 +1,5 @@
+HEAD
+        + Forbid some confusing object's names
 1.3.13
 	+ Remove migration directory
 	+ Do not run migrations from postinst
